--- a/src/App.css
+++ b/src/App.css
@@ -3,36 +3,6 @@
   text-decoration: none;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 i.large.material-icons {
     font-size: 50px;
 }
@@ -80,6 +50,12 @@ div {
 
 h1 {
     font-size: 50px;
+    margin: 0px 0px 15px 0px;
+    padding: 50px 0px 0px 0px;
+}
+
+h1.col.s12 {
+    padding: 50px 0px 0px 0px;
 }
 
 h2.col.s6 {
@@ -87,7 +63,7 @@ h2.col.s6 {
 }
 
 h2.positive.col.s6 {
- color: #1AAE9F;
+ color: #2e7d32;
 }
 h2.negative.col.s6 {
  color: #d32f2f;
